--- a/GetnMethods.csproj
+++ b/GetnMethods.csproj
@@ -22,6 +22,7 @@
     <AvaloniaResource Include="Assets\**" />
     <Content Include="Assets\report-repo.ico" />
     <Folder Include="Properties\" />
+    <Folder Include="Views\Views\" />
   </ItemGroup>
 
 
@@ -34,6 +35,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.7.7" />
+    <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
   </ItemGroup>
 
