--- a/GetnMethods.csproj
+++ b/GetnMethods.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
+    <Compile Remove="Products\BaseDialogProduct.cs" />
     <None Remove="Assets\Fonts\CascadiaCode.ttf" />
     <None Remove="Assets\Fonts\CascadiaCodeItalic.ttf" />
     <None Remove="Assets\Fonts\CascadiaCodePL.ttf" />
@@ -28,7 +29,6 @@
     <None Remove="Assets\Fonts\CascadiaMonoPL.ttf" />
     <None Remove="Assets\Fonts\CascadiaMonoPLItalic.ttf" />
     <Content Include="Assets\report-repo.ico" />
-    <Folder Include="Views\Views\" />
   </ItemGroup>
 
 
@@ -42,12 +42,12 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.8" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.7.7" />
     <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
-		<PackageReference Include="Microsoft.Build.Locator" Version="1.7.1" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.8.0" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.8.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	<PackageReference Include="Microsoft.Build.Locator" Version="1.7.1" />
+	<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
+	<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
+	<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.8.0" />
+	<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.8.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 
