--- a/src/InsightBytes.Services/InsightBytes.Services.csproj
+++ b/src/InsightBytes.Services/InsightBytes.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Units\UnitViewModels\WarningDialogProduct1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.9" />
 	<PackageReference Include="Avalonia.ReactiveUI" Version="11.0.9" />
 	<PackageReference Include="Microsoft.Build.Locator" Version="1.7.1" />
@@ -14,6 +18,10 @@
 	<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.8.0" />
 	<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.8.0" />
 	<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InsightBytes.Utilities\InsightBytes.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
