--- a/src/InsightBytes/InsightBytes.csproj
+++ b/src/InsightBytes/InsightBytes.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Assets\FASymbolFontList.json" />
     <None Remove="Assets\report-repo.ico" />
   </ItemGroup>
 
