--- a/src/InsightBytes.BlackBoxk/InsightBytes.BlackBox.csproj
+++ b/src/InsightBytes.BlackBoxk/InsightBytes.BlackBox.csproj
@@ -8,11 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\InsightBytes\InsightBytes.csproj" />
+    <ProjectReference Include="..\InsightBytes.Utilities\InsightBytes.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
