--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+src/InsightBytes.Services/Model/*.cs
+src/InsightBytes.Utilities/Model/Category.cs
