--- a/src/InsightBytes.BlackBoxk/InsightBytes.BlackBox.csproj
+++ b/src/InsightBytes.BlackBoxk/InsightBytes.BlackBox.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InsightBytes.Services\InsightBytes.Services.csproj" />
     <ProjectReference Include="..\InsightBytes.Utilities\InsightBytes.Utilities.csproj" />
   </ItemGroup>
 
