--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -60,6 +60,6 @@ jobs:
       run: dotnet restore
 
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build InsightBytes/InsightBytes.csproj --configuration Release --no-restore
 
 
