--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,8 +45,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
-    runs-on: windows-latest # Avalonia desktop apps should be built on Windows for compatibility.
+  build:
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -54,14 +54,11 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '8.0.x' # Specify the .NET version
+        dotnet-version: '6.0.x'
 
     - name: Restore dependencies
       run: dotnet restore
-
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-      working-directory: ./InsightBytes
+      working-directory: ./src/InsightBytes
 
 
 
