--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -43,19 +43,16 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
-  build:
-    runs-on: windows-latest
-
+  build-and-test:
+    runs-on: windows-latest # Avalonia desktop apps should be built on Windows for compatibility.
     steps:
     - uses: actions/checkout@v2
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.x'
-
+        dotnet-version: '8.0.x' # Specify the .NET version
+        
     - name: Restore dependencies
       run: dotnet restore
       working-directory: ./src/InsightBytes
