--- a/src/InsightBytes/InsightBytes.csproj
+++ b/src/InsightBytes/InsightBytes.csproj
@@ -58,6 +58,7 @@
 	  <PackageReference Include="DialogHost.Avalonia" Version="0.7.7" />
 	  <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
+	  <PackageReference Include="WebViewControl-Avalonia" Version="2.121.100" />
   </ItemGroup>
 
 
